--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Prueba tecnica para H&G Consultores",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/DuvanCorrea/prueba-tecnica-hyg/issues"
   },
-  "homepage": "https://github.com/DuvanCorrea/prueba-tecnica-hyg#readme"
+  "homepage": "https://github.com/DuvanCorrea/prueba-tecnica-hyg#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7",
+    "pg": "^8.6.0"
+  }
 }
